css/about.css
/* Also used for other.html */
h3 {
    margin: auto;
    text-align: center;
}

.content-row {
    background-color: wheat;
    padding-top: 30px;
    padding-bottom: 30px;
    margin-left: 0px;
    margin-right: 0px;
    padding-left: 5%;
    padding-right: 5%;
    height: fit-content;
}
.content-row-alt {
    background-color: burlywood;
}

.description {
    padding-left: 3em;
    padding-right: 3em;
    padding-top: 2em;
}

